# ComfyUI-haoee

./: Comfly.py  README.md  __init__.py  pyproject.toml  requirements.txt
workflow/: veo3-t2v-pro.json  zhenzhen Doubao SeedEdit (1).json  zhenzhen-GeminiAPI.json  zhenzhen-Midjourney.json  zhenzhen-Nano-Banana-2-Edit-Multi-I2I-4K.json  zhenzhen-Nano-Banana-2-Edit-S2A.json  zhenzhen-Nano-Banana-2-Edit-T2I-4K.json  zhenzhen-Nano-Banana-Edit-Proportion-multi-image.json  zhenzhen-Nano-Banana-Edit-Proportion-single-image.json  zhenzhen-doubao-seedream4_5_image_edit.json  zhenzhen-flux2-flex-image-eidt.json  zhenzhen-flux2-pro-1ref-eidt.json  zhenzhen-flux2-pro-2ref-eidt.json  zhenzhen-flux2-pro-3ref-eidt.json  zhenzhen-gemmi-editimage.json  zhenzhen-gpt-image-1.5-edit.json  zhenzhen-gpt-image-1.5-multi-edit.json  zhenzhen-gpt-image-1.json  zhenzhen-gpt4o-api.json  zhenzhen-grok3-video-i2v.json  zhenzhen-grok3-video-t2v.json  zhenzhen-kling-V1.0-text2video.json  zhenzhen-kling-image2video.json  zhenzhen-kling-text2video.json  zhenzhen-kontext-pro.json  zhenzhen-lip_sync.json  zhenzhen-llm-api-Identify-the-image.json  zhenzhen-llm-api-Image-expansione.json  zhenzhen-minimax-ffl2v.json  zhenzhen-mj-i2v.json  zhenzhen-mj-t2v.json  zhenzhen-nano-banana-1.json  zhenzhen-nano-banana-2.json  zhenzhen-nano-banana-V2(Gemini-3-pro-image-preview).json  zhenzhen-qwen-image-max.json  zhenzhen-seeddream-v4-image-edit-1.json  zhenzhen-seeddream-v4-image-edit-2.json  zhenzhen-seeddream3-i2v.json  zhenzhen-seeddream3-t2v.json  zhenzhen-sora-2-15s-I2V-final.json  (+28 more)
